Fix warning visibility over bg selector

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -201,7 +201,7 @@ button.ga-btn, .ol-control button {
   position: absolute;
   right: 0px;
   bottom: 27px;
-  z-index: 1000;
+  z-index: 1010;
   background: rgba(255,255,255,.7);
   border-radius: .2em 0 0 0;
   padding: .2em .4em;
